// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dynamic-export.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow

module.exports = (3 : any); // should only report unclear type, not dynamic-export

=====================================output=====================================
//@flow

module.exports = (3: any); // should only report unclear type, not dynamic-export

================================================================================
`;

exports[`implicit-inexact-object.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow

// Implicit inexact object lints are not included in all until
// https://github.com/flow-typed/flow-typed/pull/3365 lands

type X = {}; // No error

=====================================output=====================================
//@flow

// Implicit inexact object lints are not included in all until
// https://github.com/flow-typed/flow-typed/pull/3365 lands

type X = {}; // No error

================================================================================
`;

exports[`sketchy_null.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

declare var x: ?string;

//flowlint-next-line sketchy-null:error
if (x) { } // This should be an error

if (x) { } // This should be a warning

=====================================output=====================================
// @flow

declare var x: ?string;

//flowlint-next-line sketchy-null:error
if (x) {
} // This should be an error

if (x) {
} // This should be a warning

================================================================================
`;

exports[`uninitialized-instance-property.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
//@flow

// Uninitialized instance property lints are not included in all until the
// analysis is more complete

class A {
  p;
}

=====================================output=====================================
//@flow

// Uninitialized instance property lints are not included in all until the
// analysis is more complete

class A {
  p;
}

================================================================================
`;
